--- a/res/values/constants.xml
+++ b/res/values/constants.xml
@@ -89,7 +89,8 @@
 	<string name="key_interactive_timer_rate">key_interactive_timer_rate</string>
 
 	<string name="key_smooth_ui_enabled">key_smooth_ui_enabled</string>
-            
+	<string name="key_vibration_intensity">key_vibration_intensity</string>
+           
 	<string-array name="iosched_interfaces">
 	    <item>/sys/block/mtdblock4/queue/scheduler</item>
 	    <item>/sys/block/mmcblk0/queue/scheduler</item>
