--- a/res/layout/cpu.xml
+++ b/res/layout/cpu.xml
@@ -3,22 +3,16 @@
     xmlns:custom="http://schemas.android.com/apk/res/mobi.cyann.shifttools"
     android:key="root" >
 
-<<<<<<< HEAD
-    <mobi.cyann.shifttools.preference.ListPreference
-||||||| parent of f8abb1b... smooth ui
-    <mobi.cyann.deviltools.preference.ListPreference
-=======
-    <mobi.cyann.deviltools.preference.RemovablePreferenceCategory android:title="@string/general_governor" >
+    <mobi.cyann.shifttools.preference.RemovablePreferenceCategory android:title="@string/general_governor" >
 
-        <mobi.cyann.deviltools.preference.StatusPreference
-            custom:interfacePath="/sys/class/misc/devil_tweaks/smooth_ui_enabled"
+        <mobi.cyann.shifttools.preference.StatusPreference
+            custom:interfacePath="/sys/class/misc/shift_tweaks/smooth_ui_enabled"
             android:key="@string/key_smooth_ui_enabled"
             android:summary="@string/status_not_available"
             android:title="@string/label_smooth_ui_enabled" />
-    </mobi.cyann.deviltools.preference.RemovablePreferenceCategory>
+    </mobi.cyann.shifttools.preference.RemovablePreferenceCategory>
 
-    <mobi.cyann.deviltools.preference.ListPreference
->>>>>>> f8abb1b... smooth ui
+    <mobi.cyann.shifttools.preference.ListPreference
         custom:interfacePath="/sys/devices/system/cpu/cpu0/cpufreq/scaling_governor"
         android:key="@string/key_governor"
         android:summary="@string/status_not_available"
@@ -79,14 +73,8 @@
             android:title="@string/label_deepidle_stats" />
     </mobi.cyann.shifttools.preference.RemovablePreferenceCategory>
 
-<<<<<<< HEAD
-    <mobi.cyann.shifttools.preference.GovernorPreferenceGroup
-||||||| parent of f8abb1b... smooth ui
-    <mobi.cyann.deviltools.preference.GovernorPreferenceGroup
-=======
 
-    <mobi.cyann.deviltools.preference.GovernorPreferenceGroup
->>>>>>> f8abb1b... smooth ui
+    <mobi.cyann.shifttools.preference.GovernorPreferenceGroup
         android:dependency="@string/key_governor"
         custom:governor="ondemand"
         android:title="@string/label_ondemand" >
