--- a/res/values/constants.xml
+++ b/res/values/constants.xml
@@ -25,6 +25,8 @@
     <string name="key_bln_blink_count">key_bln_blink_count</string>
     <string name="key_bln_timeout">key_bln_timeout</string>
     <string name="key_blx_charging_limit">key_blx_charging_limit</string>
+
+    <string name="key_idle_mode">key_idle_mode</string>
     <string name="key_deepidle_status">key_deepidle_status</string>
 	<string name="key_deepidle_stats">key_deepidle_stats</string>
     <string name="key_liveoc">key_liveoc</string>
@@ -90,7 +92,18 @@
 	<string name="key_interactive_timer_rate">key_interactive_timer_rate</string>
 
 	<string name="key_smooth_ui_enabled">key_smooth_ui_enabled</string>
-            
+       
+	<!-- Battery -->
+	<string name="key_dcp_ac_input_curr">key_dcp_ac_input_curr</string>
+	<string name="key_dcp_ac_chrg_curr">key_dcp_ac_chrg_curr</string>
+	<string name="key_sdp_input_curr">key_sdp_input_curr</string>
+	<string name="key_sdp_chrg_curr">key_sdp_chrg_curr</string>
+	<string name="key_cdp_input_curr">key_cdp_input_curr</string>
+	<string name="key_cdp_chrg_curr">key_cdp_chrg_curr</string>
+	<string name="key_ignore_stable_margin">key_ignore_stable_margin</string>
+	<string name="key_ignore_unstable_power">key_ignore_unstable_power</string>
+	<string name="key_batt_chrg_soft_volt">key_batt_chrg_soft_volt</string>
+     
 	<string-array name="iosched_interfaces">
 	    <item>/sys/block/mtdblock4/queue/scheduler</item>
 	    <item>/sys/block/mmcblk0/queue/scheduler</item>
